--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,76 +1,43 @@
 ---
 export interface Props {
 	title: string;
-	body: string;
+	genre: string;
+	description: string;
 	href: string;
+	banner: string;
 }
 
-const { href, title, body } = Astro.props;
+const { title, genre, description, href, banner } = Astro.props;
 ---
 
-<li class="link-card">
-	<a href={href}>
-		<h2>
+<div class="novel-card">
+	<div>
+		<a href={href}>
+			<img src={banner}>
+		</a>
+	</div>
+	<div class="novel-title">
+		<a href={href}>
 			{title}
-			<span>&rarr;</span>
-		</h2>
-		<p>
-			{body}
-		</p>
-	</a>
-</li>
+		</a>
+	</div>
+	<div>
+		{genre}
+	</div>
+	<div>
+		{description}
+	</div>
+</div>
 <style>
-	:root {
-		--link-gradient: linear-gradient(45deg, #4f39fa, #da62c4 30%, var(--color-border) 60%);
+	.novel-card {
+		padding: 0.3rem;
+		max-width: 100ch;
+		margin: 0 auto;
 	}
 
-	.link-card {
-		list-style: none;
-		display: flex;
-		padding: 0.15rem;
-		background-image: var(--link-gradient);
-		background-size: 400%;
-		border-radius: 0.5rem;
-		background-position: 100%;
-		transition: background-position 0.6s cubic-bezier(0.22, 1, 0.36, 1);
-	}
-
-	.link-card > a {
-		width: 100%;
-		text-decoration: none;
-		line-height: 1.4;
-		padding: 1em 1.3em;
-		border-radius: 0.35rem;
-		color: var(--text-color);
-		background-color: white;
-		opacity: 0.8;
-	}
-
-	h2 {
+	.novel-title {
 		margin: 0;
 		transition: color 0.6s cubic-bezier(0.22, 1, 0.36, 1);
-	}
-
-	p {
-		margin-top: 0.75rem;
-		margin-bottom: 0;
-	}
-
-	h2 span {
-		display: inline-block;
-		transition: transform 0.3s cubic-bezier(0.22, 1, 0.36, 1);
-	}
-
-	.link-card:is(:hover, :focus-within) {
-		background-position: 0;
-	}
-
-	.link-card:is(:hover, :focus-within) h2 {
-		color: #4f39fa;
-	}
-
-	.link-card:is(:hover, :focus-within) h2 span {
-		will-change: transform;
-		transform: translateX(2px);
+		font-weight: bold;
 	}
 </style>
