--- a/src/pages/times/index.astro
+++ b/src/pages/times/index.astro
@@ -2,21 +2,26 @@
 import Layout from "../../layouts/Layout.astro";
 import ImageCut from "../../components/NovelImageCut.astro";
 
-const title="廻りめぐる季節～還る場所へ～"
+const title="時の欠片"
 const tabTitle = title + " - Top"
 ---
 
 <Layout title={tabTitle}>
-	<ImageCut src="../cut/school.jpg" />
+	<ImageCut src="../cut/times.jpg" />
 	<h2>{title}</h2>
 	<p>
-		平穏にみえる日常は少しずついびつな形に姿を変え、望まぬ未来へと収束する。
-		解き放たれた運命は移り変わる季節に流されて、確実に終わりのその日へと近づいていた――。
+		駅へ向かういつもの道で、私は見たことのない扉を発見する。
 	</p>
 	<p>
-		世界各国から精鋭が集う国立芸術学校、リトワール国立学院に通う学生たちの生活を描いた群像劇。
+		その向こうには、すべてが錆びついた赤茶色の景色が広がっていた。
 	</p>
 	<h3>本編目次</h3>
+	<a href="./01">０１</a>
+	／<a href="./02">０２</a>
+	／<a href="./03">０３</a>
+	／<a href="./04">０４</a>
+	／<a href="./05">０５</a>
+	（完）
 </Layout>
 
 <style>
