ページリンク修正

--- a/src/components/PageNav.astro
+++ b/src/components/PageNav.astro
@@ -6,8 +6,8 @@ export interface Props {
 
 const { back, next } = Astro.props
 
-const backLink: string = "./" + back
-const nextLink: string = "./" + next
+const backLink: string = back
+const nextLink: string = next
 
 const backText: string = "ＢＡＣＫ"
 const nextText: string = "ＮＥＸＴ"
