--- a/src/components/PageNav.astro
+++ b/src/components/PageNav.astro
@@ -1,22 +1,22 @@
 ---
 export interface Props {
-	back: string
-	next: string
+  back: string;
+  next: string;
 }
 
-const { back, next } = Astro.props
+const { back, next } = Astro.props;
 
-const backLink: string = back
-const nextLink: string = next
+const backLink: string = "../" + back;
+const nextLink: string = "../" + next;
 
-const backText: string = "ＢＡＣＫ"
-const nextText: string = "ＮＥＸＴ"
+const backText: string = "ＢＡＣＫ";
+const nextText: string = "ＮＥＸＴ";
 ---
 
 <div class="page-nav">
-	{back !== null ? <a href={backLink}>{backText}</a> : <span></span>}
-	&nbsp;|&nbsp;
-	{next !== null ? <a href={nextLink}>{nextText}</a> : <span></span>}
+  {back !== null ? <a href={backLink}>{backText}</a> : <span />}
+  {back !== null || next !== null ? <span>&nbsp;|&nbsp;</span> : <span />}
+  {next !== null ? <a href={nextLink}>{nextText}</a> : <span />}
 </div>
 
 <style>
