--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -3,13 +3,12 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="ページが見つかりません">
-	<p>
-		ページが見つかりませんでした。
-	</p>
-	<p>
-		<a href="/">旅人たちの紡歌トップページへ</a>
-	</p>
+  <p>ページが見つかりませんでした。</p>
+  <p>
+    <a href="/">旅人たちの紡歌トップページへ</a>
+  </p>
 </Layout>
 
 <style>
+
 </style>
