--- a/src/pages/school/index.astro
+++ b/src/pages/school/index.astro
@@ -2,36 +2,36 @@
 import Layout from "../../layouts/Layout.astro";
 import ImageCut from "../../components/NovelImageCut.astro";
 
-const title="廻りめぐる季節～還る場所へ～"
-const tabTitle = title + " - Top"
+const title = "廻りめぐる季節～還る場所へ～";
+const tabTitle = title + " - Top";
 ---
 
 <Layout title={tabTitle}>
-	<ImageCut src="../cut/school.jpg" />
-	<h2>{title}</h2>
-	<p>
-		平穏にみえる日常は少しずついびつな形に姿を変え、望まぬ未来へと収束する。
-		解き放たれた運命は移り変わる季節に流されて、確実に終わりのその日へと近づいていた――。
-	</p>
-	<p>
-		世界各国から精鋭が集う国立芸術学校、リトワール国立学院に通う学生たちの生活を描いた群像劇。
-	</p>
-	<h3>本編目次</h3>
+  <ImageCut src="../cut/school.jpg" />
+  <h2>{title}</h2>
+  <p>
+    平穏にみえる日常は少しずついびつな形に姿を変え、望まぬ未来へと収束する。
+    解き放たれた運命は移り変わる季節に流されて、確実に終わりのその日へと近づいていた――。
+  </p>
+  <p>
+    世界各国から精鋭が集う国立芸術学校、リトワール国立学院に通う学生たちの生活を描いた群像劇。
+  </p>
+  <h3>本編目次</h3>
 </Layout>
 
 <style>
-	h2 {
-		margin: 9px 0 0;
-		padding: 2px 8px;
-		color: #fff;
-		background-color: #666;
-		font-weight: bold;
-		letter-spacing: 2px;
-	}
+  h2 {
+    margin: 9px 0 0;
+    padding: 2px 8px;
+    color: #fff;
+    background-color: #666;
+    font-weight: bold;
+    letter-spacing: 2px;
+  }
 
-	h3 {
-		border-left: 3px double;
-		padding-left: 10px;
-		margin-bottom: 8px;
-	}
+  h3 {
+    border-left: 3px double;
+    padding-left: 10px;
+    margin-bottom: 8px;
+  }
 </style>
