--- a/src/pages/times/index.astro
+++ b/src/pages/times/index.astro
@@ -2,41 +2,37 @@
 import Layout from "../../layouts/Layout.astro";
 import ImageCut from "../../components/NovelImageCut.astro";
 
-const title="時の欠片"
-const tabTitle = title + " - Top"
+const title = "時の欠片";
+const tabTitle = title + " - Top";
 ---
 
 <Layout title={tabTitle}>
-	<ImageCut src="../cut/times.jpg" />
-	<h2>{title}</h2>
-	<p>
-		駅へ向かういつもの道で、私は見たことのない扉を発見する。
-	</p>
-	<p>
-		その向こうには、すべてが錆びついた赤茶色の景色が広がっていた。
-	</p>
-	<h3>本編目次</h3>
-	<a href="./01">０１</a>
-	／<a href="./02">０２</a>
-	／<a href="./03">０３</a>
-	／<a href="./04">０４</a>
-	／<a href="./05">０５</a>
-	（完）
+  <ImageCut src="../cut/times.jpg" />
+  <h2>{title}</h2>
+  <p>駅へ向かういつもの道で、私は見たことのない扉を発見する。</p>
+  <p>その向こうには、すべてが錆びついた赤茶色の景色が広がっていた。</p>
+  <h3>本編目次</h3>
+  <a href="./01">０１</a>
+  ／<a href="./02">０２</a>
+  ／<a href="./03">０３</a>
+  ／<a href="./04">０４</a>
+  ／<a href="./05">０５</a>
+  （完）
 </Layout>
 
 <style>
-	h2 {
-		margin: 9px 0 0;
-		padding: 2px 8px;
-		color: #fff;
-		background-color: #666;
-		font-weight: bold;
-		letter-spacing: 2px;
-	}
+  h2 {
+    margin: 9px 0 0;
+    padding: 2px 8px;
+    color: #fff;
+    background-color: #666;
+    font-weight: bold;
+    letter-spacing: 2px;
+  }
 
-	h3 {
-		border-left: 3px double;
-		padding-left: 10px;
-		margin-bottom: 8px;
-	}
+  h3 {
+    border-left: 3px double;
+    padding-left: 10px;
+    margin-bottom: 8px;
+  }
 </style>
