--- a/src/pages/white/index.astro
+++ b/src/pages/white/index.astro
@@ -10,7 +10,8 @@ const tabTitle = title + " - Top";
   <ImageCut src="../cut/white.jpg" />
   <h2>{title}</h2>
   <p>
-    唯一の肉親であった兄を戦争によって亡くした少女エルセは、幼なじみのターキィのもとへ身を寄せる。<br>
+    唯一の肉親であった兄を戦争によって亡くした少女エルセは、幼なじみのターキィのもとへ身を寄せる。<br
+    />
     しかし、平穏だと思われた日常は徐々に姿を変えていく。ある日、エルセはまるで何かに導かれるように、兄の命を奪った敵国トロイラへ向かうことになる。
   </p>
   <p>
