--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,116 +1,116 @@
 ---
 //サイト全体用レイアウトページ
 export interface Props {
-	title: string
+  title: string;
 }
 
-const { title } = Astro.props
-const date = new Date
-const currentYear = date.getFullYear()
+const { title } = Astro.props;
+const date = new Date();
+const currentYear = date.getFullYear();
 ---
 
 <!DOCTYPE html>
 <html lang="ja">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
-	</head>
-	<body>
-		<header>
-			<div class="title-area">
-				<span class="site-title"><a href="/">旅人たちの紡歌</a></span>
-			</div>
-		</header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="generator" content={Astro.generator} />
+    <title>{title}</title>
+  </head>
+  <body>
+    <header>
+      <div class="title-area">
+        <span class="site-title"><a href="/">旅人たちの紡歌</a></span>
+      </div>
+    </header>
     <main>
       <slot />
     </main>
-		<footer>
-			Copyright(C)2007-{currentYear} Yoka All rights reserved.
-		</footer>
-	</body>
+    <footer>
+      Copyright(C)2007-{currentYear} Yoka All rights reserved.
+    </footer>
+  </body>
 </html>
 
 <style>
-	:root {
-		--font-size-base: clamp(0.9rem, 0.34vw + 0.5rem, 0.9rem);
-		--font-size-lg: clamp(1.0rem, 0.7vw + 0.5rem, 1.0rem);
-		--font-size-xl: clamp(2rem, 2.38vw + 1.85rem, 2rem);
+  :root {
+    --font-size-base: clamp(0.9rem, 0.34vw + 0.5rem, 0.9rem);
+    --font-size-lg: clamp(1rem, 0.7vw + 0.5rem, 1rem);
+    --font-size-xl: clamp(2rem, 2.38vw + 1.85rem, 2rem);
 
-		--color-text: hsl(12, 5%, 4%);
-		--color-hover: hsl(12, 5%, 60%);
-		--color-bg: hsl(10, 21%, 95%);
-		--color-border: hsl(17, 24%, 90%);
-	}
+    --color-text: hsl(12, 5%, 4%);
+    --color-hover: hsl(12, 5%, 60%);
+    --color-bg: hsl(10, 21%, 95%);
+    --color-border: hsl(17, 24%, 90%);
+  }
 
-	html {
-		font-size: var(--font-size-base);
-		color: var(--color-text);
-		background-color: var(--color-bg);
-	}
+  html {
+    font-size: var(--font-size-base);
+    color: var(--color-text);
+    background-color: var(--color-bg);
+  }
 
-	body {
-		margin: 0;
-	}
+  body {
+    margin: 0;
+  }
 
-	:global(main) {
-		margin: auto;
-		padding: 1em;
-		max-width: 90ch;
-	}
+  :global(main) {
+    margin: auto;
+    padding: 1em;
+    max-width: 90ch;
+  }
 
-	:global(h1) {
-		font-size: var(--font-size-xl);
-	}
+  :global(h1) {
+    font-size: var(--font-size-xl);
+  }
 
-	:global(h2) {
-		font-size: var(--font-size-lg);
-	}
+  :global(h2) {
+    font-size: var(--font-size-lg);
+  }
 
-	:global(h3) {
-		font-size: var(--font-size-lg);
-	}
+  :global(h3) {
+    font-size: var(--font-size-lg);
+  }
 
-	:global(code) {
-		font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-			Bitstream Vera Sans Mono, Courier New, monospace;
-	}
+  :global(code) {
+    font-family: Menlo, Monaco, Lucida Console, Liberation Mono,
+      DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace;
+  }
 
-	:global(a) {
-		text-decoration: underline;
-		color: var(--color-text);
-	}
+  :global(a) {
+    text-decoration: underline;
+    color: var(--color-text);
+  }
 
-	:global(a:hover) {
-		color: var(--color-hover);
-	}
+  :global(a:hover) {
+    color: var(--color-hover);
+  }
 
-	:global(header) {
-		padding: 10px 10px;
-		box-shadow: 0 1px 10px 0 var(--color-hover);
-	}
+  :global(header) {
+    padding: 10px 10px;
+    box-shadow: 0 1px 10px 0 var(--color-hover);
+  }
 
-	:global(header a){
-		text-decoration: none;
-	}
+  :global(header a) {
+    text-decoration: none;
+  }
 
-	:global(.title-area) {
-		max-width: 90ch;
-		margin: 0 auto;
-	}
+  :global(.title-area) {
+    max-width: 90ch;
+    margin: 0 auto;
+  }
 
-	:global(.site-title) {
-		font-family: serif;
-		font-size: var(--font-size-xl);
-		font-weight: lighter;
-	}
+  :global(.site-title) {
+    font-family: serif;
+    font-size: var(--font-size-xl);
+    font-weight: lighter;
+  }
 
-	:global(footer) {
-		margin-top: 20px;
-		padding: 10px 0;
-		border-top: 1px solid var(--color-border);
-		text-align: center;
-	}
+  :global(footer) {
+    margin-top: 20px;
+    padding: 10px 0;
+    border-top: 1px solid var(--color-border);
+    text-align: center;
+  }
 </style>
