作品トップへ戻るの修正

--- a/src/components/ReturnTop.astro
+++ b/src/components/ReturnTop.astro
@@ -10,7 +10,7 @@ const { series, title } = Astro.props;
 {
   series !== null ? (
     <div class="return-top">
-      <a href="./">作品トップへ戻る</a>
+      <a href="../">作品トップへ戻る</a>
     </div>
   ) : (
     <div class="return-top">
