--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import Card from "../components/Card.astro";
 import ShortStories from "../components/ShortStories.astro";
 ---
 
-<Layout title="旅人たちの紡歌 - Index">
+<Layout title="旅人たちの紡歌 - ＩＮＤＥＸ">
   <section>
     <h2>アバウト</h2>
     <article>
