めぐめぐ内容追加

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,13 +1,13 @@
 ---
 export interface Props {
-  title: string;
-  genre: string;
-  description: string;
-  href: string;
-  banner: string;
+  title: string
+  genre: string
+  description: string
+  href: string
+  banner: string
 }
 
-const { title, genre, description, href, banner } = Astro.props;
+const { title, genre, description, href, banner } = Astro.props
 ---
 
 <div class="novel-card">
