--- a/src/components/ReturnTop.astro
+++ b/src/components/ReturnTop.astro
@@ -1,10 +1,10 @@
 ---
 export interface Props {
-  series: string;
-  title: string;
+  series: string
+  title: string
 }
 
-const { series, title } = Astro.props;
+const { series, title } = Astro.props
 ---
 
 {
