--- a/src/components/ShortStories.astro
+++ b/src/components/ShortStories.astro
@@ -1,6 +1,6 @@
 ---
 //短編一覧
-const stories = await Astro.glob("../pages/short/*.md");
+const stories = await Astro.glob("../pages/short/*.md")
 ---
 
 {
