--- a/src/pages/white/index.astro
+++ b/src/pages/white/index.astro
@@ -1,9 +1,9 @@
 ---
-import Layout from "../../layouts/Layout.astro";
-import ImageCut from "../../components/NovelImageCut.astro";
+import Layout from "../../layouts/Layout.astro"
+import ImageCut from "../../components/NovelImageCut.astro"
 
-const title = "眠りの白に導かれ";
-const tabTitle = title + " - Top";
+const title = "眠りの白に導かれ"
+const tabTitle = title + " - Top"
 ---
 
 <Layout title={tabTitle}>
@@ -18,6 +18,71 @@ const tabTitle = title + " - Top";
     そこで待ち受けていたのは、遠い昔から眠り続けてきた、一つの意思だった――。
   </p>
   <h3>本編目次</h3>
+  <h4>序章「月の下で」</h4>
+  01
+
+  <h4>１章「始動」</h4>
+  01
+  &nbsp;02
+
+  <h4>２章「忍び寄る者」</h4>
+  01
+  &nbsp;02
+  &nbsp;03
+
+  <h4>幕間　ディルケス</h4>
+  01
+
+  <h4>３章「夢幻の狭間で」</h4>
+  01
+  &nbsp;02
+  &nbsp;03
+  &nbsp;04
+  &nbsp;05
+  &nbsp;06
+
+  <h4>４章「交差と翻弄」</h4>
+  01
+  &nbsp;02
+  &nbsp;03
+  &nbsp;04
+  &nbsp;05
+
+  <h4>幕間　ミュゼ</h4>
+  01
+
+  <h4>５章「祈りの向かうその先へ」</h4>
+  01
+  &nbsp;02
+  &nbsp;03
+  &nbsp;04
+  &nbsp;05
+
+  <h4>６章「追想」</h4>
+  01
+  &nbsp;02
+  &nbsp;03
+
+  <h4>幕間　イアトス</h4>
+  01
+
+  <h4>７章「憧憬の果て」</h4>
+  01
+  &nbsp;02
+  &nbsp;03
+  &nbsp;04
+  &nbsp;05
+  &nbsp;06
+
+  <h4>幕間　リオット</h4>
+  01
+
+  <h4>８章「眠りの白に導かれ」</h4>
+  01
+  &nbsp;02
+
+  <h4>終章「繰り返される物語」</h4>
+  01
 </Layout>
 
 <style>
@@ -34,5 +99,10 @@ const tabTitle = title + " - Top";
     border-left: 3px double;
     padding-left: 10px;
     margin-bottom: 8px;
+  }
+
+  h4 {
+    margin-top: 20px;
+    border-bottom: 1px dotted #000;
   }
 </style>
