--- a/src/components/Novel.astro
+++ b/src/components/Novel.astro
@@ -1,10 +1,10 @@
 ---
 export interface Props {
-  title: string;
-  body: string;
+  title: string
+  body: string
 }
 
-const { title, body } = Astro.props;
+const { title, body } = Astro.props
 ---
 
 <section>
