--- a/src/components/NovelImageCut.astro
+++ b/src/components/NovelImageCut.astro
@@ -1,9 +1,9 @@
 ---
 export interface Props {
-  src: string;
+  src: string
 }
 
-const { src } = Astro.props;
+const { src } = Astro.props
 ---
 
 <div class="novel-image">
