--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,8 @@
 ---
 //トップページ
-import Layout from "../layouts/Layout.astro";
-import Card from "../components/Card.astro";
-import ShortStories from "../components/ShortStories.astro";
+import Layout from "../layouts/Layout.astro"
+import Card from "../components/Card.astro"
+import ShortStories from "../components/ShortStories.astro"
 ---
 
 <Layout title="旅人たちの紡歌 - ＩＮＤＥＸ">
