--- a/src/pages/times/index.astro
+++ b/src/pages/times/index.astro
@@ -1,9 +1,9 @@
 ---
-import Layout from "../../layouts/Layout.astro";
-import ImageCut from "../../components/NovelImageCut.astro";
+import Layout from "../../layouts/Layout.astro"
+import ImageCut from "../../components/NovelImageCut.astro"
 
-const title = "時の欠片";
-const tabTitle = title + " - Top";
+const title = "時の欠片"
+const tabTitle = title + " - Top"
 ---
 
 <Layout title={tabTitle}>
