プロフィールなどを追加

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -28,7 +28,7 @@ const currentYear = date.getFullYear()
       <slot />
     </main>
 		<footer>
-			Copyright(C)2007-{currentYear} Yoka All rights reserved.
+			Copyright(C)2007-{currentYear} <a href="https://greenry.jp" target="_blank">Suzuka Mikami</a> All rights reserved.
 		</footer>
 	</body>
 </html>
