--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -56,6 +56,21 @@ import ShortStories from "../components/ShortStories.astro"
     <h3>短編</h3>
     <ShortStories />
   </section>
+  <section>
+    <h2>オフライン情報</h2>
+    <h3>参加イベント</h3>
+    未定
+    <h3>刊行物</h3>
+    準備中
+  </section>
+  <section>
+    <h2>プロフィール</h2>
+    <article>
+      名前：三上涼風（旧・耀華）<br>
+      終わらない物語が好き。<br>
+      ＞<a href="https://greenry.jp" target="_blank">みかすずポータル</a>
+    </article>
+  </section>
 </Layout>
 
 <style>
