--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,7 +27,7 @@ import ShortStories from "../components/ShortStories.astro"
     <Card
       title="廻りめぐる季節～還る場所へ～"
       genre="短編連作／異世界FT／学園／群像劇"
-      description="リトワール国立学院に通う学生たちの生活を描いた異世界ファンタジー連作。"
+      description="この世で一番美しいものは、この世で一番醜いものの上に成り立っている。"
       href="/school"
       banner="/banner/school.jpg"
     />
