--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,6 +17,7 @@ import ShortStories from "../components/ShortStories.astro"
     <h2>更新履歴</h2>
     <article>
       <ul>
+        <li>2022/09/01 <a href="/seiran">晴嵐の少年少女！</a>第1章09までアップ</li>
         <li>2022/08/29 ホームページリニューアルしました</li>
       </ul>
     </article>
@@ -24,6 +25,13 @@ import ShortStories from "../components/ShortStories.astro"
   <section>
     <h2>作品一覧</h2>
     <h3>連載中</h3>
+    <Card
+      title="晴嵐の少年少女！"
+      genre="長編／近未来日本FT／子供／複数勢力"
+      description="大人の世界から分断された世界で、三十歳未満の子供たちが繰り広げる、嵐のようなドタバタ劇！"
+      href="/seiran"
+      banner="/banner/seiran.gif"
+    />
     <Card
       title="廻りめぐる季節～還る場所へ～"
       genre="短編連作／異世界FT／学園／群像劇"
