--- a/src/pages/seiran/index.astro
+++ b/src/pages/seiran/index.astro
@@ -24,23 +24,23 @@ const tabTitle = title + " - Top"
   </p>
   <h3>第1部　晴嵐の盟約編</h3>
   <h4>第1章</h4>
-  <a href="./1/1-1">01</a>
+  <a href="./1-1-1">01</a>
   &nbsp;
-  <a href="./1/1-2">02</a>
+  <a href="./1-1-2">02</a>
   &nbsp;
-  <a href="./1/1-3">03</a>
+  <a href="./1-1-3">03</a>
   &nbsp;
-  <a href="./1/1-4">04</a>
+  <a href="./1-1-4">04</a>
   &nbsp;
-  <a href="./1/1-5">05</a>
+  <a href="./1-1-5">05</a>
   &nbsp;
-  <a href="./1/1-6">06</a>
+  <a href="./1-1-6">06</a>
   &nbsp;
-  <a href="./1/1-7">07</a>
+  <a href="./1-1-7">07</a>
   &nbsp;
-  <a href="./1/1-8">08</a>
+  <a href="./1-1-8">08</a>
   &nbsp;
-  <a href="./1/1-9">09</a>
+  <a href="./1-1-9">09</a>
   &nbsp;
 </Layout>
 
