--- a/src/pages/seiran/index.astro
+++ b/src/pages/seiran/index.astro
@@ -22,7 +22,7 @@ const tabTitle = title + " - Top"
   <p>
     彼らによって繰り広げられる、「晴嵐」をめぐるの物語。
   </p>
-  <h3>第1部　晴嵐の盟約編</h3>
+  <h3>第1部　黒マント編</h3>
   <h4>第1章</h4>
   <a href="./1-1-1">01</a>
   &nbsp;
