部の説明文

--- a/src/pages/seiran/index.astro
+++ b/src/pages/seiran/index.astro
@@ -23,6 +23,10 @@ const tabTitle = title + " - Top"
     彼らによって繰り広げられる、「晴嵐」をめぐるの物語。
   </p>
   <h3>第1部　黒マント編</h3>
+  <p>
+    地区総代を夢見る少年、航。ある日、地区総代選挙を見に行った帰りに怪しい二人組の男に捕まってしまう。<br>
+    時を同じくして、各地で黒マントの謎の姿が目撃されるようになる。
+  </p>
   <h4>第1章</h4>
   <a href="./1-1-1">01</a>
   &nbsp;
