--- a/src/pages/seiran/index.astro
+++ b/src/pages/seiran/index.astro
@@ -11,7 +11,7 @@ const tabTitle = title + " - Top"
   <h2>{title}</h2>
   <p>
     大人と子供が分断された世界――。<br>
-    子供の世界は百四の区に分けられ、それぞれの区は地区総代とその右腕が統治する。<br>
+    子供の世界は百三の区に分けられ、それぞれの区は地区総代とその右腕が統治する。<br>
     子供たちは十歳になると連れてこられて、三十歳までを暮らす、そんな世界。
   </p>
   <p>
