v5にアップグレード

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,37 +29,37 @@ import ShortStories from "../components/ShortStories.astro"
       title="晴嵐の少年少女！"
       genre="長編／近未来日本FT／子供／複数勢力"
       description="大人の世界から分断された世界で、三十歳未満の子供たちが繰り広げる、嵐のようなドタバタ劇！"
-      href="/seiran"
-      banner="/banner/seiran.gif"
+      href="./seiran"
+      banner="./banner/seiran.gif"
     />
     <Card
       title="廻りめぐる季節～還る場所へ～"
       genre="短編連作／異世界FT／学園／群像劇"
       description="この世で一番美しいものは、この世で一番醜いものの上に成り立っている。"
-      href="/school"
-      banner="/banner/school.jpg"
+      href="./school"
+      banner="./banner/school.jpg"
     />
     <h3>完結</h3>
     <Card
       title="眠りの白に導かれ"
       genre="372枚／異世界FT／シリアス／運命／主従／かっこいい幼女"
       description="これは、繰り返される物語である。"
-      href="/white"
-      banner="/banner/white.gif"
+      href="./white"
+      banner="./banner/white.gif"
     />
     <Card
       title="空の揺動"
       genre="61枚／悲恋／少し前の日本"
       description="アザーズプロット２参加作品。"
-      href="/sky"
-      banner="/banner/sky.jpg"
+      href="./sky"
+      banner="./banner/sky.jpg"
     />
     <Card
       title="時の欠片"
       genre="60枚／現代／探偵のまねごと／大学生"
       description="トンネルの向こうには、錆びついた町があった。オンライン文化祭2013参加作品。"
-      href="/times"
-      banner="/banner/times.jpg"
+      href="./times"
+      banner="./banner/times.jpg"
     />
     <h3>短編</h3>
     <ShortStories />
